--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,4 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
+@import "./colors";
+@import "./utils";
 
 @font-face {
     font-family: 'basiercircle-regular';
