--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -8,10 +8,17 @@
   }
 
 .App{
+    height: auto;
+    min-height: 100vh;
+    padding: 30px 0 60px;
     background-color: #F9F9F9;
 
         .aside{
+            height: 100%;
+            border-radius: 15px;
             background-color: #fff;
-            height: 100vh;
         }
 }
+
+@import "./pages/PersonalInformation/navigator.scss";
+@import "./pages/PersonalInformation/profile.scss";
