--- a/src/assets/scss/pages/PersonalInformation/navigator.scss
+++ b/src/assets/scss/pages/PersonalInformation/navigator.scss
@@ -11,14 +11,34 @@
         color: $humming-bird;
         font-family: 'basiercircle-regular';
 
+        @include  media-breakpoint-down(md){
+            padding-bottom: 18px;
+        }
+
         &.active,
         &:hover{
             background-color: #ECEFFE;
             color: $royal-blue;
+
+            @include  media-breakpoint-down(md){
+                border-radius: 0;
+                background-color: $white;
+                border-bottom: 2px solid $royal-blue;
+            }
         }
 
         .nav-link-icon{
             margin-right: 8px;
+
+            @include  media-breakpoint-down(md){
+                margin-right: 0;
+            }
+        }
+
+        span{
+            @include  media-breakpoint-down(md){
+                display: none;
+            }
         }
     }
 }
